--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div align="center">
-    <a href="/1er Trim/">Lenguaje de marcas</a>
+    <a href="/1er Trim/index.html">Lenguaje de marcas</a>
     </div>
 </body>
 </html>
