--- a/3er_Trim/Cluedo/index.html
+++ b/3er_Trim/Cluedo/index.html
@@ -28,26 +28,23 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/3er_Trim/Cluedo/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Reglas</a>
+              <a class="nav-link" href="/3er_Trim/Cluedo/reglas.html">Reglas</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Personajes
-              </a>
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"aria-expanded="false">Personajes</a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Amapola</a></li>
+                <li><a class="dropdown-item" href="/3er_Trim/Cluedo/Amapola.html">Amapola</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="#">Prado</a></li>
+                <li><a class="dropdown-item" href="/3er_Trim/Cluedo/Prado.html">Prado</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="#">Rubio</a></li>
+                <li><a class="dropdown-item" href="/3er_Trim/Cluedo/Rubio.html">Rubio</a></li>
               </ul>
             </li>
             <li class="nav-item">
