--- a/3er_Trim/Cluedo/index.html
+++ b/3er_Trim/Cluedo/index.html
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/3er_Trim/Cluedo/index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="/lenguaje-de-marcas/3er_Trim/Cluedo/index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/lenguaje-de-marcas/3er_Trim/Cluedo/reglas.html">Reglas</a>
