--- a/3er_Trim/Cluedo/reglas.html
+++ b/3er_Trim/Cluedo/reglas.html
@@ -31,7 +31,7 @@
               <a class="nav-link active" aria-current="page" href="/lenguaje-de-marcas/3er_Trim/Cluedo/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/3er_Trim/Cluedo/reglas.html">Reglas</a>
+              <a class="nav-link" href="/lenguaje-de-marcas/3er_Trim/Cluedo/reglas.html">Reglas</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"aria-expanded="false">Personajes</a>
