--- a/3er_Trim/Cluedo/Prado.html
+++ b/3er_Trim/Cluedo/Prado.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
-        <img src="images/logop.png" alt="...">
+        <img src="/lenguaje-de-marcas/3er_Trim/images/logop.png" alt="...">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -55,7 +55,7 @@
       </div>
     </nav>
     <div class="card" style="width: 18rem;">
-        <img src="/3er_Trim/Cluedo/images/prado.png" class="card-img-top" alt="...">
+        <img src="/lenguaje-de-marcas/3er_Trim/Cluedo/images/prado.png" class="card-img-top" alt="...">
         <div class="card-body">
           <p class="card-text">Ex fotografo que se hizo famoso al ser el primero en captrar un crimen famoso, se hico muy relevante 
             pero hace tiempo que no consigue pillar nungun suceso impactante, y esta perdiendo su fama</p>
