--- a/3er_Trim/Cluedo/Rubio.html
+++ b/3er_Trim/Cluedo/Rubio.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
-        <img src="images/logop.png" alt="...">
+        <img src="/lenguaje-de-marcas/3er_Trim/images/logop.png" alt="...">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -55,7 +55,7 @@
       </div>
     </nav>
     <div class="card" style="width: 18rem;">
-        <img src="/3er_Trim/Cluedo/images/rubio.png" class="card-img-top" alt="...">
+        <img src="/lenguaje-de-marcas/3er_Trim/Cluedo/images/rubio.png" class="card-img-top" alt="...">
         <div class="card-body">
           <p class="card-text">Niño rico que heredo la fortuna de unos familiares, justo despues de salir de la carcel, se oyen voces que murmullan que fue el el que lo orquesto todo</p>
         </div>
