--- a/3er_Trim/Cluedo/index.html
+++ b/3er_Trim/Cluedo/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
-        <img src="images/logop.png" alt="...">
+        <img src="/lenguaje-de-marcas/3er_Trim/images/logop.png" alt="...">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -68,17 +68,17 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="images/caja-juego.jpg" class="d-block w-100" alt="...">
+              <img src="/lenguaje-de-marcas/3er_Trim/images/caja-juego.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
               </div>
             </div>
             <div class="carousel-item">
-              <img src="images/caja.jpg" class="d-block w-100" alt="...">
+              <img src="/lenguaje-de-marcas/3er_Trim/images/caja.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
               </div>
             </div>
             <div class="carousel-item">
-              <img src="images/juego.jpg" class="d-block w-100" alt="...">
+              <img src="/lenguaje-de-marcas/3er_Trim/images/juego.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
               </div>
             </div>
@@ -117,7 +117,7 @@
     <div class="row">
       <div class="col-md-4">
         <div class="card">
-          <img src="images/personajes.png" class="card-img-top" alt="...">
+          <img src="/lenguaje-de-marcas/3er_Trim/images/personajes.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Personajes</h5>
             <p class="card-text">Puedes escoger a varios personajes.</p>
@@ -127,7 +127,7 @@
       </div>
       <div class="col-md-4">
         <div class="card">
-          <img src="images/armas.png" class="card-img-top" alt="...">
+          <img src="/lenguaje-de-marcas/3er_Trim/images/armas.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Armas</h5>
             <p class="card-text">Puedes escoger varias armas.</p>
@@ -137,7 +137,7 @@
       </div>
       <div class="col-md-4">
         <div class="card">
-          <img src="images/lugares.png" class="card-img-top" alt="...">
+          <img src="/lenguaje-de-marcas/3er_Trim/images/lugares.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Lugares</h5>
             <p class="card-text">Puedes escoger varias lugares.</p>
