--- a/3er_Trim/Cluedo/reglas.html
+++ b/3er_Trim/Cluedo/reglas.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
-        <img src="images/logop.png" alt="...">
+        <img src="/lenguaje-de-marcas/3er_Trim/images/logop.png" alt="...">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -80,42 +80,42 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="/3er_Trim/Cluedo/Reglas/Reglas cluedo 1.png" class="d-block img-fluid w-75" alt="...">
+                <img src="/lenguaje-de-marcas/3er_Trim/Cluedo/Reglas/Reglas cluedo 1.png" class="d-block img-fluid w-75" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="/3er_Trim/Cluedo/Reglas/Reglas cluedo 2.png" class="d-block img-fluid w-75" alt="...">
+                <img src="/lenguaje-de-marcas/3er_Trim/Cluedo/Reglas/Reglas cluedo 2.png" class="d-block img-fluid w-75" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="/3er_Trim/Cluedo/Reglas/Reglas cluedo 3.png" class="d-block img-fluid w-75" alt="...">
+                <img src="/lenguaje-de-marcas/3er_Trim/Cluedo/Reglas/Reglas cluedo 3.png" class="d-block img-fluid w-75" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="/3er_Trim/Cluedo/Reglas/Reglas cluedo 4.png" class="d-block img-fluid w-75" alt="...">
+                <img src="/lenguaje-de-marcas/3er_Trim/Cluedo/Reglas/Reglas cluedo 4.png" class="d-block img-fluid w-75" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="/3er_Trim/Cluedo/Reglas/Reglas cluedo 5.png" class="d-block img-fluid w-75" alt="...">
+                <img src="/lenguaje-de-marcas/3er_Trim/Cluedo/Reglas/Reglas cluedo 5.png" class="d-block img-fluid w-75" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="/3er_Trim/Cluedo/Reglas/Reglas cluedo 6.png" class="d-block img-fluid w-75" alt="...">
+                <img src="/lenguaje-de-marcas/3er_Trim/Cluedo/Reglas/Reglas cluedo 6.png" class="d-block img-fluid w-75" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="/3er_Trim/Cluedo/Reglas/Reglas cluedo 7.png" class="d-block img-fluid w-75" alt="...">
+                <img src="/lenguaje-de-marcas/3er_Trim/Cluedo/Reglas/Reglas cluedo 7.png" class="d-block img-fluid w-75" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="/3er_Trim/Cluedo/Reglas/Reglas cluedo 8.png" class="d-block img-fluid w-75" alt="...">
+                <img src="/lenguaje-de-marcas/3er_Trim/Cluedo/Reglas/Reglas cluedo 8.png" class="d-block img-fluid w-75" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
               </div>
